--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <junit.platform.version>1.8.1</junit.platform.version>
         <spring.boot.starter.version>3.1.2</spring.boot.starter.version>
         <spring.boot.starter.test.version>3.1.2</spring.boot.starter.test.version>
+        <json.version>20230618</json.version>
     </properties>
     <dependencies>
         <dependency>
@@ -74,14 +75,18 @@
             <artifactId>spring-boot-starter</artifactId>
             <version>${spring.boot.starter.version}</version>
         </dependency>
-
-
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>${json.version}</version>
+        </dependency>
+
 
     </dependencies>
     <build>
