--- a/Dockerfiles/processingservice/Dockerfile
+++ b/Dockerfiles/processingservice/Dockerfile
@@ -1,4 +1,4 @@
 FROM openjdk:20
-WORKDIR /app
+#WORKDIR /app
 COPY ProcessingService-1.0-SNAPSHOT.jar ProcessingService.jar
 ENTRYPOINT ["java", "-jar", "ProcessingService.jar"]
