--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,12 @@
     <artifactId>ProcessingService</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>3.1.2</version>
+        <relativePath/> <!-- lookup parent from repository -->
+    </parent>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -15,9 +21,6 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <junit.jupiter.version>5.8.1</junit.jupiter.version>
         <junit.platform.version>1.8.1</junit.platform.version>
-        <spring.boot.starter.web.version>3.1.2</spring.boot.starter.web.version>
-        <spring.boot.starter.data.jpa.version>3.1.2</spring.boot.starter.data.jpa.version>
-        <spring.boot.starter.test.version>3.1.2</spring.boot.starter.test.version>
         <json.version>20230618</json.version>
         <surefire.report.parser.version>3.1.2</surefire.report.parser.version>
         <docker.java.core.version>3.3.2</docker.java.core.version>
@@ -35,12 +38,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
-            <version>${spring.boot.starter.data.jpa.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-            <version>${spring.boot.starter.web.version}</version>
         </dependency>
         <dependency>
             <groupId>org.liquibase</groupId>
