--- a/pom.xml
+++ b/pom.xml
@@ -15,14 +15,13 @@
     <properties>
         <java.version>20</java.version>
         <mapstruct.version>1.5.5.Final</mapstruct.version>
-        <junit-jupiter.version>5.9.3</junit-jupiter.version>
+        <junit.jupiter.version>5.9.3</junit.jupiter.version>
         <mockito-core.version>3.11.0</mockito-core.version>
         <snakeyaml.version>2.0</snakeyaml.version>
         <testcontainers.version>1.18.3</testcontainers.version>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <junit.jupiter.version>5.8.1</junit.jupiter.version>
         <junit.platform.version>1.8.1</junit.platform.version>
         <json.version>20230618</json.version>
         <surefire.report.parser.version>3.1.2</surefire.report.parser.version>
@@ -35,6 +34,7 @@
         <liquibase-core.version>4.23.1</liquibase-core.version>
         <slf4j.api.version>2.0.7</slf4j.api.version>
         <maven.resources.plugin.version>3.3.0</maven.resources.plugin.version>
+        <kafka.version>3.2.3</kafka.version>
     </properties>
     <dependencies>
         <dependency>
@@ -42,7 +42,6 @@
             <artifactId>spring-kafka-test</artifactId>
             <scope>test</scope>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -51,7 +50,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka</artifactId>
@@ -93,7 +91,7 @@
         <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka-clients</artifactId>
-            <version>2.8.0</version>
+            <version>${kafka.version}</version>
         </dependency>
         <dependency>
             <groupId>org.liquibase</groupId>
@@ -105,7 +103,6 @@
             <artifactId>postgresql</artifactId>
             <version>${postgresql.version}</version>
         </dependency>
-
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -136,7 +133,6 @@
             <version>${junit.platform.version}</version>
             <scope>test</scope>
         </dependency>
-
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
