--- a/DockerfilesProcessing/processingservice/Dockerfiles/Dockerfile
+++ b/DockerfilesProcessing/processingservice/Dockerfiles/Dockerfile
@@ -1,8 +1,8 @@
 FROM openjdk:11
 RUN apt-get -y update && apt-get install -y maven
-WORKDIR /jrmjacp
+WORKDIR /org/jacp
 COPY pom.xml .
 RUN mvn -B dependency:resolve dependency:resolve-plugins
 COPY runtests.sh .
 RUN chmod u+x runtests.sh
-COPY . .
+COPY Dockerfiles .
