--- a/DockerfilesProcessing/processingservice/Dockerfiles/Dockerfile
+++ b/DockerfilesProcessing/processingservice/Dockerfiles/Dockerfile
@@ -2,14 +2,14 @@ FROM openjdk:11
 
 RUN apt-get -y update && apt-get install -y maven
 
-RUN mkdir -p /src/main/java/org/jacp
-RUN mkdir -p /src/test/java/org/jacp
+RUN mkdir -p ProcessingService/src/main/java/org/jacp
+RUN mkdir -p ProcessingService/src/test/java/org/jacp
 
-COPY pom.xml /src/main/java/org/jacp/
-COPY runtests.sh /src/main/java/org/jacp/
+WORKDIR /ProcessingService
 
-RUN chmod u+x /src/main/java/org/jacp/runtests.sh
+COPY pom.xml .
+COPY runtests.sh .
 
-WORKDIR /src/main/java/org/jacp
+RUN chmod u+x ./runtests.sh
 
 RUN mvn -B dependency:resolve dependency:resolve-plugins
