--- a/DockerfilesProcessing/processingservice/Dockerfiles/pom.xml
+++ b/DockerfilesProcessing/processingservice/Dockerfiles/pom.xml
@@ -46,7 +46,7 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
-            <version>RELEASE</version>
+            <version>${junit.jupiter.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -61,6 +61,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.1.2</version>
+                <configuration>
+                    <testSourceDirectory>/src/test/java/org/jacp</testSourceDirectory>
+                </configuration>
             </plugin>
         </plugins>
     </build>
